# func-prog-1

./: README.md
.github/workflows/: flow.yaml
task1/: README.md  dune-project
task1/_build/: log
task1/lib/: dune  imperative.ml  map.ml  modulish.ml  rec.ml  tailrec.ml
task1/loops/: .gitignore
task1/loops/lib/: sum.ml
task1/mapreduce/: dune-project
task1/mapreduce/lib/: dune  sum.ml
task1/module/lib/: sum.ml
task1/monolith_rec/: dune-project
task1/monolith_rec/lib/: dune  sum.ml
task1/monolith_rec/test/: dune
task1/monolith_tailrec/: dune-project
task1/monolith_tailrec/lib/: dune  sum.ml
task30/: README.md  dune-project  solution.py  task30.opam
task30/lib/: dune  imperative.ml  infinite.ml  modulish.ml  rec.ml  tailrec.ml
