(library
 (name rec)
 (modules Rec)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test)))

(library
 (name tailrec)
 (modules Tailrec)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test)))

(library
 (name modulish)
 (modules Modulish)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test)))

(library
 (name imperative)
 (modules Imperative)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test)))
